# psb

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  TODO  TODO.md  action.yml  markdown.abnf  markdown.ebnf  psb.cabal  restructured.ebnf
.github/workflows/: build-container.yml
.shake/: .shake.database
app/: Config.hs  HTML.hs  IR.hs  Logger.hs  Main.hs  Markdown.hs  Restruct.hs  Templates.hs  Types.hs  Utilities.hs
app/Logger/: Shake.hs
app/Markdown/: Data.hs  Parser.hs
app/Tests/Markdown/: Parse.hs
app/Utilities/: Action.hs
src/: Config.hs  HTML.hs  IR.hs  Logger.hs  Markdown.hs  Restruct.hs  Templates.hs  Types.hs
src/Psb/: Main.hs
src/Utilities/: Action.hs  Bundling.hs  CSS.hs  FilePath.hs  Javascript.hs  Parsing.hs
tests/Markdown/: Parse.hs
